--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="profile Photo.png" alt="Profile picture"></td>
+      <td><img src="Profile Photo.png" alt="Profile picture"></td>
       <td>
         <h1>Fake Name Trial MBA</h1>
         </p>
