--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
 <head>
   <meta charset="utf-8">
   <title>Personal Website</title>
+
+  <style>
+    body {
+      background-color: #EAF6F6;
+    }
+
+    hr{
+      border-style: none;
+      border-top-style: dotted;
+      border-color: grey;
+      border-width: 5px;
+      width: 5%;
+    }
+
+
+  </style>
+
+
 </head>
 
 <body>
@@ -21,7 +39,7 @@
       </td>
     </tr>
   </table>
-    <hr size="3" noshade>
+    <hr>
   <p>
   <h3>Education and Certifications </h3>
   </p>
@@ -29,7 +47,7 @@
     <li> Diploma in Business and, Postgraduate (PGD) Executive Management</li>
     <li> <strong>Master in Business Administration (MBA) <a href="https://aru.ac.uk/">Anglia Ruskin University</a></strong></li>
   </ul>
-  <hr size="3" noshade>
+  <hr>
   <h3>Work Experience</h3>
   <table cellspacing="10">
     <thead>
@@ -49,7 +67,7 @@
     </tbody>
     </tr>
   </table>
-  <hr size="3" noshade>
+  <hr>
   <h3>Skills</h3>
   <table>
     <tr>
@@ -79,7 +97,7 @@
       </td>
     </tr>
   </table>
-  <hr size="3" noshade>
+  <hr>
 
   <a href="hobbies.html">Hobbies and Interest</a>
   <p><a href="Contact_me.html">Contact Me</a></p>
@@ -87,3 +105,4 @@
 </body>
 
 </html>
+
