--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </p>
   <ul>
     <li> Diploma in Business and, Postgraduate (PGD) Executive Management</li>
-    <li> <strong>Master in Business Administration (MBA) <a href="https://aru.ac.uk/">Anglia Ruskin University</a></strong></li>
+    <li> <strong>Full Stack Developer (MBA) <a href="https://aru.ac.uk/">Anglia Ruskin University</a></strong></li>
   </ul>
   <hr>
   <h3>Work Experience</h3>
